--- a/src/main/resources/ui.fxml
+++ b/src/main/resources/ui.fxml
@@ -38,7 +38,7 @@
             <Insets left="10.0" right="10.0" />
          </GridPane.margin>
       </VBox>
-      <Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" style="-fx-background-color: #ff0000;" GridPane.columnSpan="2">
+      <Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" style="-fx-background-color: #800000;" GridPane.columnSpan="2">
          <children>
             <Label layoutX="10.0" text="Homeflix">
                <font>
