--- a/src/main/resources/ui.fxml
+++ b/src/main/resources/ui.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.text.Font?>
 <?import org.controlsfx.control.StatusBar?>
 
-<fx:root maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" type="GridPane" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.111">
+<fx:root maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" type="GridPane" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
   <columnConstraints>
     <ColumnConstraints hgrow="NEVER" />
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" />
@@ -38,11 +38,11 @@
             <Insets left="10.0" right="10.0" />
          </GridPane.margin>
       </VBox>
-      <Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" style="-fx-background-color: #ff0000;" GridPane.columnSpan="2">
+      <Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" style="-fx-background-color: #800000;" GridPane.columnSpan="2">
          <children>
-            <Label layoutX="10.0" text="Homeflix">
+            <Label layoutX="10.0" text="Homeflix" textFill="WHITE">
                <font>
-                  <Font size="36.0" />
+                  <Font name="System Bold" size="36.0" />
                </font>
             </Label>
          </children>
