--- a/src/main/resources/ui.fxml
+++ b/src/main/resources/ui.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<?import org.controlsfx.control.StatusBar?>
+<?import org.controlsfx.control.TaskProgressView?>
 
 <fx:root maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" type="GridPane" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
   <columnConstraints>
@@ -61,14 +61,35 @@
             <Button fx:id="searchButton" mnemonicParsing="false" text="Search" GridPane.columnIndex="1" />
          </children>
       </GridPane>
-      <StatusBar fx:id="statusBar" maxHeight="30.0" prefHeight="30.0" GridPane.columnSpan="2" GridPane.rowIndex="4" />
-      <TableView fx:id="tableView" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
-        <columns>
-          <TableColumn fx:id="hostColumn" prefWidth="75.0" text="Host" />
-          <TableColumn fx:id="fileNameColumn" prefWidth="75.0" text="File Name" />
-            <TableColumn fx:id="sizeColumn" prefWidth="75.0" text="Size" />
-        </columns>
-      </TableView>
+      <GridPane GridPane.columnIndex="1" GridPane.rowIndex="2">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+          <ColumnConstraints hgrow="NEVER" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="300.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="30.0" vgrow="NEVER" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <TableView fx:id="tableView" prefHeight="200.0" prefWidth="200.0" GridPane.rowSpan="2">
+              <columns>
+                <TableColumn fx:id="hostColumn" prefWidth="150.0" text="Host" />
+                <TableColumn fx:id="fileNameColumn" prefWidth="200.0" text="File Name" />
+                  <TableColumn fx:id="sizeColumn" prefWidth="75.0" text="Size" />
+              </columns>
+               <GridPane.margin>
+                  <Insets right="10.0" />
+               </GridPane.margin>
+            </TableView>
+            <TaskProgressView fx:id="taskProgressView" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Label text="Connected Peers:" GridPane.columnIndex="1" />
+            <Label fx:id="connectedPeers" text="0" GridPane.columnIndex="1">
+               <GridPane.margin>
+                  <Insets left="100.0" />
+               </GridPane.margin>
+            </Label>
+         </children>
+      </GridPane>
       <Button fx:id="getItButton" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="GET IT" GridPane.columnIndex="1" GridPane.rowIndex="3" />
    </children>
 </fx:root>
